2014-11-18  Arjen de Rijke  <arjenderijke@gmail.com>

	* configure.ac: Add libtool support

2014-11-16  Arjen de Rijke  <arjenderijke@gmail.com>

	* configure.ac: Add support for automake

	* src/Makefile.in (cembeddedhttpd): Add more substitution variables

2014-11-11  Arjen de Rijke  <arjenderijke@gmail.com>

	* src/main.c (answer_to_connection): add hello_browser example code and handcode changes to compilation in makefile template

	* configure.ac: Use version created by autoscan

	* Makefile.in (Makefile): Use makefile templates

	* configure.ac: Add autotools support
