@@ -1,0 +1,5 @@
+SUBDIRS = include
+
+lib_LTLIBRARIES = libqueryhandler.la
+libqueryhandler_la_SOURCES = libqueryhandler.c
+libqueryhandler_la_CPPFLAGS = -I$(top_srcdir)/libqueryhandler/include
