@@ -1,0 +1,1 @@
+include_HEADERS = libqueryhandler.h
