@@ -1,7 +1,7 @@
 bin_PROGRAMS = cembeddedhttpd
 cembeddedhttpd_SOURCES = main.c
-cembeddedhttpd_CPPFLAGS = -I$(top_srcdir)/libexamples/include
-cembeddedhttpd_LDADD = ../libexamples/libexamples.la
+cembeddedhttpd_CPPFLAGS = -I$(top_srcdir)/libexamples/include -I$(top_srcdir)/libqueryhandler/include
+cembeddedhttpd_LDADD = ../libexamples/libexamples.la ../libqueryhandler/libqueryhandler.la
 
 check_SCRIPTS = greptest.sh
 TESTS = $(check_SCRIPTS)
