@@ -1,3 +1,7 @@
+2015-01-06  Arjen de Rijke  <arjenderijke@gmail.com>
+
+	* add skeleton libqueryhandler
+
 2014-11-18  Arjen de Rijke  <arjenderijke@gmail.com>
 
 	* configure.ac: Add libtool support
